--- a/NtqLesson09/NtqBaiKiemTraGiuaKi/bin/NtqBaiKiemTraGiuaKi.dll.config
+++ b/NtqLesson09/NtqBaiKiemTraGiuaKi/bin/NtqBaiKiemTraGiuaKi.dll.config
@@ -63,6 +63,7 @@
   <connectionStrings>
     <add name="NtqK22CNT1Lesoon07bEntities" connectionString="metadata=res://*/Models.NtqModel2210900119.csdl|res://*/Models.NtqModel2210900119.ssdl|res://*/Models.NtqModel2210900119.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-9BORGO65;initial catalog=NtqK22CNT1Lesoon07b;integrated security=True;encrypt=False;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="NtqK22CNT1Lesoon07bEntities1" connectionString="metadata=res://*/Models.NtqModel2210900119.csdl|res://*/Models.NtqModel2210900119.ssdl|res://*/Models.NtqModel2210900119.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-9BORGO65;initial catalog=NtqK22CNT1Lesoon07b;integrated security=True;encrypt=False;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="NtqK22CNT1Lesson07bEntities" connectionString="metadata=res://*/Models.NtqModel2210900119.csdl|res://*/Models.NtqModel2210900119.ssdl|res://*/Models.NtqModel2210900119.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-9BORGO65;initial catalog=NtqK22CNT1Lesson07b;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
